This commit will fix the collapsing grid layout on large screens

--- a/css/grid.css
+++ b/css/grid.css
@@ -2,6 +2,7 @@
 /* Grid */
 .grid-container {
     display: grid;
+    width: 100%;
     grid-template-columns: 100%;
     grid-template-rows: auto;
     grid-template-areas: 
@@ -76,7 +77,7 @@ nav {
 /* Media Queries */
 @media (min-width: 768px) {
     .grid-container {
-        grid-template-columns: 80px 1fr 1fr;
+        grid-template-columns: 80px 40% 40%;
         grid-template-rows: auto;
         grid-template-areas: 
             "header header header"
@@ -90,31 +91,35 @@ nav {
             ;
     }
 
-    
-
-    .main-content {
-        grid-template-columns: 50%;
-    }
-
-    .traffic, .social {
-        grid-column: 1 / span 2;
+    .traffic, .social, .alert {
+        grid-column: 2 / span 2;
     }
 
     .daily, .members, .message {
-        grid-column: 1 / span 1;
-    }
-
-    .mobile, .activity, .settings {
         grid-column: 2 / span 1;
     }
 
+    .mobile, .activity, .settings {
+        grid-column: 3 / span 1;
+    }
+
     .widget-container-full {
-        width: 90vw;
+        width: 75vw;
     }
 
     .widget-container-half {
-        width: 45vw;
+        width: 35vw;
     }
+
+    .traffic,
+    .daily,
+    .social,
+    .members,
+    .message {
+        padding-left: 10px;
+    }
+
+
 }
 
 
